oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
        - args:
            - --cookie-secure=false
            #- --upstream=file://dev/null
            #- --upstream=http://10.106.39.73/
            - --upstream=static://200
            - --http-address=0.0.0.0:4180
            - --cookie-secret=somerandomstring12341234567890AB
            - --client-id=example-app
            - --client-secret=ZXhhbXBsZS1hcHAtc2VjcmV0
            - --email-domain="*"
            #- --cookie-name=frontend_id
            - --provider=oidc
            - --provider-display-name="Dex oidc"
            - --redirect-url=http://10.106.39.73/oauth2/callback
            #following should match what is configured in dex
            - --oidc-issuer-url=http://192.168.64.1:5556/dex
            #- --cookie-samesite=lax
            - --session-store-type=cookie
            - --pass-basic-auth=false
            - --pass-access-token=true
            - --pass-authorization-header=true
            - --set-authorization-header=true
            - --ssl-insecure-skip-verify=true
            - --set-xauthrequest=true
            #- --reverse-proxy=true
            #- --whitelist-domain=".corp.justin-tech.com"
            #- --cookie-domain="*"
            - --standard-logging=true
            - --auth-logging=true
            - --request-logging=true
            - --skip-provider-button=true
            #- --upstream=static://
          image: quay.io/pusher/oauth2_proxy:v5.1.1
          imagePullPolicy: Always
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              protocol: TCP


---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth2-proxy
  name: oauthproxy-service
  namespace: default
spec:
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
  selector:
    app: oauth2-proxy

---

#gateway allows http traffic into mesh

# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: oauth2-gateway
#   namespace: default
# spec:
#   selector:
#     istio: ingressgateway # use Istio default gateway implementation
#   servers:
#   - port:
#       number: 4180
#       name: http
#       protocol: HTTP
#     hosts:
#     - "*"

---
# bind vs to the gateway
#vs does routing

# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: oauth2-vs
#   namespace: default
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - oauth2-gateway
#   http:
#   # - route:
#   #   - destination:
#   #       port:
#   #         number: 4180
#   #       host: oauthproxy-service.default.svc.cluster.local
#   - match:
#     - uri:
#         prefix: /headers
#     route:
#     - destination:
#         port:
#           number: 4180
#         host: oauthproxy-service.default.svc.cluster.local
