httpbin-svc.yaml
#gateway allows http traffic into mesh

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
  namespace: foo
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 4180
      name: httpx
      protocol: HTTP
    hosts:
    - "*"
---
# bind vs to the gateway
#vs does routing

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: foo
spec:
  hosts:
  - "*"
  gateways:
  - httpbin-gateway
  http:
  # - route:
  #   - destination:
  #       port:
  #         number: 8000
  #       host: httpbin.foo.svc.cluster.local
  - match:
    - uri:
        prefix: /oauth
    route:
    - destination:
        port:
          number: 4180
        host: oauthproxy-service.default.svc.cluster.local
        
  # - match:
  #   - uri:
  #       prefix: /auth
  #   route:
  #   - destination:
  #       port:
  #         number: 4180
  #       host: oauthproxy-service.default.svc.cluster.local
  # - match:
  #   - uri:
  #       prefix: /api
  #   route:
  #   - destination:
  #       port:
  #         number: 4180
  #       host: oauthproxy-service.default.svc.cluster.local

  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8000
        host: httpbin.foo.svc.cluster.local
        

---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
  namespace: foo
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
      version: v1
  template:
    metadata:
      labels:
        app: httpbin
        version: v1
    spec:
      serviceAccountName: httpbin
      containers:
      - image: docker.io/kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        name: httpbin
        ports:
        - containerPort: 80
